k8s/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /sales
          pathType: Prefix
          backend:
            service:
              name: sales-service
              port:
                number: 5678
        - path: /shipping
          pathType: Prefix
          backend:
            service:
              name: shipping-service
              port:
                number: 5678
        - path: /customers
          pathType: Prefix
          backend:
            service:
              name: customers-service
              port:
                number: 5678
